JSON Project Added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="projects">
-      <h1 class="tagline">Projects & Homework</h1>
+      <h1 class="tagline">Projects & Labs</h1>
       <div class="projectCard">
         <h1>Cartoon Project</h1>
         <div class="links">
@@ -31,10 +31,7 @@
             <i class="fa-brands fa-github"></i>
             <p>View On GitHub</p></a
           >
-          <a
-            href="https://hebamiftah.github.io/Cartoon-Project/"
-            target="_blank"
-          >
+          <a href="https://hebamiftah.github.io/Cartoon-Project/">
             <i class="fa-solid fa-link"></i>
             <p>Live</p></a
           >
@@ -44,11 +41,11 @@
       <div class="projectCard">
         <h1>JSON Fruit Lab</h1>
         <div class="links">
-          <a href="#" target="_blank">
+          <a href="https://github.com/hebamiftah/JSON-Chart" target="_blank">
             <i class="fa-brands fa-github"></i>
             <p>View On GitHub</p></a
           >
-          <a href="#" target="_blank">
+          <a href="https://hebamiftah.github.io/JSON-Chart/">
             <i class="fa-solid fa-link"></i>
             <p>Live</p></a
           >
