--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
           >
         </div>
       </div>
+      <div class="projectCard">
+        <h1>Animation Project</h1>
+        <div class="links">
+          <a
+            href="   https://hebamiftah.github.io/Animation-Project/"
+            target="_blank"
+          >
+            <i class="fa-brands fa-github"></i>
+            <p>View On GitHub</p></a
+          >
+          <a href="https://hebamiftah.github.io/Animation-Project/">
+            <i class="fa-solid fa-link"></i>
+            <p>Live</p></a
+          >
+        </div>
+      </div>
     </div>
   </body>
 </html>
