--- a/index.html
+++ b/index.html
@@ -67,6 +67,23 @@
           >
         </div>
       </div>
+
+      <div class="projectCard">
+        <h1>Forms Project</h1>
+        <div class="links">
+          <a
+            href="https://github.com/hebamiftah/Temparature-Converter"
+            target="_blank"
+          >
+            <i class="fa-brands fa-github"></i>
+            <p>View On GitHub</p></a
+          >
+          <a href="https://hebamiftah.github.io/Temparature-Converter/">
+            <i class="fa-solid fa-link"></i>
+            <p>Live</p></a
+          >
+        </div>
+      </div>
     </div>
   </body>
 </html>
