--- a/index.html
+++ b/index.html
@@ -101,6 +101,26 @@
           >
         </div>
       </div>
+
+      <div class="projectCard">
+        <h1>Bootstrap</h1>
+        <div class="links">
+          <a
+            href="https://github.com/hebamiftah/BootStrap-Project"
+            target="_blank"
+          >
+            <i class="fa-brands fa-github"></i>
+            <p>View On GitHub</p></a
+          >
+          <a
+            href="https://github.com/hebamiftah/BootStrap-Project"
+            target="_blank"
+          >
+            <i class="fa-solid fa-link"></i>
+            <p>Live</p></a
+          >
+        </div>
+      </div>
     </div>
   </body>
 </html>
