--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <p>View On GitHub</p></a
           >
           <a
-            href="https://github.com/hebamiftah/BootStrap-Project"
+            href="https://hebamiftah.github.io/BootStrap-Project/"
             target="_blank"
           >
             <i class="fa-solid fa-link"></i>
