--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
             <p>Live</p></a
           >
         </div>
+        <div class="projectCard">
+          <h1>Resume Lab</h1>
+          <div class="links">
+            <a href="https://github.com/hebamiftah/Resume-Lab" target="_blank">
+              <i class="fa-brands fa-github"></i>
+              <p>View On GitHub</p></a
+            >
+            <a href="https://hebamiftah.github.io/Resume-Lab/" target="_blank">
+              <i class="fa-solid fa-link"></i>
+              <p>Live</p></a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </body>
