--- a/index.html
+++ b/index.html
@@ -171,6 +171,20 @@
           >
         </div>
       </div>
+
+      <div class="projectCard">
+        <h1>Menu Layout</h1>
+        <div class="links">
+          <a href="https://github.com/hebamiftah/Resume-Lab" target="_blank">
+            <i class="fa-brands fa-github"></i>
+            <p>View On GitHub</p></a
+          >
+          <a href="https://github.com/hebamiftah/Menu-Layout target="_blank">
+            <i class="fa-solid fa-link"></i>
+            <p>Live</p></a
+          >
+        </div>
+      </div>
     </div>
   </body>
 </html>
