--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <i class="fa-brands fa-github"></i>
             <p>View On GitHub</p></a
           >
-          <a href="https://github.com/hebamiftah/Menu-Layout target="_blank">
+          <a href="https://github.com/hebamiftah/Menu-Layout" target="_blank">
             <i class="fa-solid fa-link"></i>
             <p>Live</p></a
           >
